adding basic higherarchy and html
More features coming soon

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-"hello world"
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Welcome</title>
+</head>
+<body>
+go to first choice <a href="first_choice/choice1.html">lets go!</a>
+</body>
+</html>
