Adding a simple style sheet
adding simple style sheet and an image improving organization

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>Welcome</title>
+    <link rel="stylesheet" href="stylesheets/space_style.css">
 </head>
 <body>
-go to first choice <a href="first_choice/choice1.html">lets go!</a>
+go to first choice: <a href="first_choice/choice1.html">lets go!</a>
 </body>
 </html>
