--- a/second_choice/choice2.html
+++ b/second_choice/choice2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Page Title</title>
+	<link rel="stylesheet" href="../stylesheets/space_style.css">
 </head>
 <body>
 You search for food, and found some berries! These berries are nothing like what you have seen before, but are quite clearly berries. Do you want to eat them?
