--- a/third_choice/choice3.html
+++ b/third_choice/choice3.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Page Title</title>
+	<link rel="stylesheet" href="../stylesheets/space_style.css">
 </head>
 <body>
 You found water! This seems to be a lake or ocean of sorts. Would you like to collect some water to drink?
